:white_check_mark: Expect refusal test option is included in edition tests